# Cinary

./: .gitignore  CMakeLists.txt
sample/: sample.txt
src/: CMakeLists.txt  FixedAny.h  TypeOf.h  TypedTuple.h  bstream.h  cinary.h  cinary_in.cpp  cinary_out.cpp  ibstream.h  obstream.h  sample.cpp  sample.h  sample_any.cpp  sample_in.cpp  sample_out.cpp  type_utils.h
trial/: CMakeLists.txt  any.cpp  map_output.cpp
